# redshift-to-lakehouse-migration

./: .gitignore  MIGRATION_PLAYBOOK.md  README.md  databricks.yml  pyproject.toml  requirements.txt  tmp_sql.json
.github/workflows/: cd.yml  ci.yml  terraform-plan.yml
docs/: data_dictionary.md  dbt_to_lakehouse_mapping.md
governance/: access_controls.sql  audit_queries.sql
infrastructure/terraform/: .terraform.lock.hcl  main.tf  s3.tf  variables.tf
infrastructure/unity_catalog/: setup_catalog.sql
lakehouse_pipelines/bronze/: ingest_claims.py  ingest_policies.py  ingest_premiums.py  ingest_properties.py
lakehouse_pipelines/gold/: dim_policy.py  fact_claims.py  fact_premiums.py
lakehouse_pipelines/silver/: clean_claims.py  clean_policies.py  clean_premiums.py  clean_properties.py
lakehouse_pipelines/silver/utils/: data_quality_checks.py  schema_validator.py
legacy_dbt_project/: dbt_project.yml  profiles.yml.example
legacy_dbt_project/macros/: generate_surrogate_key.sql
legacy_dbt_project/models/marts/: dim_coverage.sql  dim_date.sql  dim_policy.sql  dim_property.sql  fact_claims.sql  fact_premiums.sql
legacy_dbt_project/tests/: assert_claim_amount_positive.sql  assert_policy_has_property.sql
migration_validation/: reconciliation.py
notebooks/: run_data_quality_checks.py  smoke_test.py
sample_data/: generate_sample_data.py  raw_claims.csv  raw_policies.csv  raw_properties.csv
scripts/: teardown.py
tests/: conftest.py  test_data_quality.py  test_silver_transforms.py
tests/smoke/: verify_layer_access.py
(+4 files in other folders)
